Fixed some layout issues

--- a/styles/_landingpage.scss
+++ b/styles/_landingpage.scss
@@ -1,12 +1,12 @@
 #landing-page {
-    height: 100vh;
-    width: 100vw;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: transparent;
-    transition: all .3s linear;
-} 
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+  transition: all 0.3s linear;
+}
 
 .hidden-overlay {
   position: absolute;
@@ -14,7 +14,7 @@
 }
 
 #title-wrapper {
-  width: 100vw;
+  width: 100%;
   height: 80px;
   position: absolute;
   bottom: 70%;
@@ -28,7 +28,7 @@
 }
 
 #landing-btn-wrapper {
-  width: 100vw;
+  width: 100%;
   height: 80px;
   position: absolute;
   top: 70%;
@@ -45,7 +45,6 @@
     width: 100%;
     padding: 0.2rem 1.25rem;
     text-align: center;
-    // font-family: "Dekko", cursive;
     text-transform: uppercase;
     font-size: 1.5rem;
     letter-spacing: 0.2rem;
@@ -77,13 +76,13 @@
 
 .landing-btn-div:hover {
   background: url('data:image/svg+xml;utf8,<svg width="100" height="100" transform="rotate(25)" opacity="0.3" version="1.1" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><g  fill="%23250E17"><circle cx="25" cy="25" r="12.5"/><circle cx="75" cy="75" r="12.5"/><circle cx="75" cy="25" r="12.5"/><circle cx="25" cy="75" r="12.5"/></g></svg>'),
-  $white;
+    $white;
   background-size: 12px, 100%;
 }
 
 /* for every .button container add a solid background behind the container itself, slightly offset */
 .landing-btn-div:before {
-  content: "";
+  content: '';
   position: absolute;
   left: -1rem;
   top: 0.15rem;
@@ -99,7 +98,7 @@
 
 video {
   height: auto;
-  min-height:100%;
+  min-height: 100%;
   max-height: 100%;
   width: 100%;
   min-width: 100%;
@@ -107,7 +106,7 @@ video {
 
 #video-wrapper {
   height: 100%;
-  min-height:100%;
+  min-height: 100%;
   width: 100%;
   min-width: 100%;
   background-color: $black;
@@ -122,7 +121,7 @@ video {
   right: 10px;
 }
 
-#skip-intro-btn:hover{
+#skip-intro-btn:hover {
   cursor: pointer;
   color: white;
 }
@@ -137,8 +136,12 @@ video {
 }
 
 @keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @media screen and (max-width: 481px) {
